Styled and aligned skills, portfolio, timeline, contact and footer. Added corrective classes to portfolio img/descriptions. Fixed validation issue with background clipping

--- a/main.css
+++ b/main.css
@@ -18,6 +18,10 @@ body {
   background-size: cover;
 }
 
+section {
+  padding: 6rem;
+}
+
 a {
   text-decoration: none;
   color: #eee;
@@ -44,7 +48,7 @@ img {
 
 .section-heading {
   text-align: center;
-  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 .section-heading h1 {
@@ -82,6 +86,10 @@ img {
 .section-heading h6 {
   font-size: 1.6rem;
   font-weight: 300;
+}
+
+.has-margin-right {
+ margin-right: 5rem; 
 }
 
 /*Header Styling*/
@@ -124,6 +132,7 @@ li {
 .nav-link:hover,
 .nav-link:focus {
   background: linear-gradient(to top, #ffe838, #fd57bf);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -195,6 +204,7 @@ li {
   font-size: 15rem;
   font-family: "Raleway", sans-serif;
   background: linear-gradient(to top, #ffe838, #fd57bf );
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding: 1rem;
@@ -269,17 +279,211 @@ li {
   text-align: center;
 }
 
-/*Start portfolio*/
-/*End services*/
+.skill {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
 
-/*Start timeline*/
-/*End timeline*/
+.skill h1 {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 2rem -2px 2rem 0;
+}
 
-/*Start contact*/
-/*End contact*/
+.icon-container {
+  width: 10rem;
+  height: 10rem;
+  border: 3px solid #ffe838;
+  background-color: #fd57bf;
+  margin-bottom: 2rem;
+  display: flex;
+  transform: rotate(45deg);
+}
 
-/*Start footer*/
-/*End footer*/
+.icon-container i {
+  color: #ffe838;
+  font-size: 5rem;
+  margin: auto;
+  transform: rotate(-45deg);
+}
+
+/*Portfolio Styling*/
+
+.portfolio-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5rem;
+}
+
+.portfolio-item:last-child {
+  margin-bottom: 0;
+}
+
+.portfolio-img {
+  width: 50rem;
+  flex: 1;
+}
+
+.portfolio-description {
+  flex: 2;
+}
+
+.portfolio-description h1 {
+  font-size: 3rem;
+  font-weight: 300;
+  margin: 1rem 0;
+}
+
+.portfolio-description h6 {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  opacity: .3;
+}
+
+.portfolio-description .cta {
+  display: inline-block;
+  margin-top: 2.5rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  color: #3883ff;
+  transition: color 650ms;
+}
+
+.portfolio-description .cta:hover {
+  color: #2f67cd;
+}
+/*Timeline Styling*/
+
+.timeline ul {
+  border-left: 4px solid #ffe838;
+  border-radius: .8rem;
+  background-color: rgba(0, 0, 0, 0.05);
+  margin: 0 auto;
+  position: relative;
+  padding: 5rem;
+  list-style: none;
+  text-align: left;
+  width: 70%;
+}
+
+.timeline h1 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  opacity: .3;
+}
+
+.timeline .date {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  position: relative;
+}
+
+.timeline .date:last-of-type {
+  padding-bottom: 0;
+  margin-bottom: 0;
+  border: none;
+}
+
+.timeline .date::before,
+.timeline .date::after {
+  position: absolute;
+  display: block;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.timeline .date::before {
+  content: attr(data-date);
+  left: -21rem;
+  text-align: right;
+  min-width: 12rem;
+  font-size: 1.5rem;
+}
+
+.timeline .date::after {
+  content: "";
+  box-shadow: 0 0 0 4px #fd57bf;
+  border-radius: 100%;
+  left: -8rem;
+  height: 1.5rem;
+  width: 1.5rem;
+  background-color: #313534;
+
+}
+
+/*Contact Styling*/
+
+.contact {
+  background-color: #221e3f;
+}
+
+form {
+  width: 70%;
+  margin: 0 auto;
+}
+
+form label {
+  font-size: 1.5rem;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 1rem;
+  margin-bottom: 5px;
+  border: none;
+  outline-color: #fd57bf;
+}
+
+input[type="submit"] {
+  width: initial;
+  background-color: #fd57bf;
+  color: #eee;
+  padding: 1rem 2rem;
+  border-radius: .8rem;
+  cursor: pointer;
+  transition: background-color 650ms;
+}
+
+input[type="submit"]:hover {
+  color: #221e3f;
+  background-color: #ffe838;
+}
+
+/*Footer Styling*/
+.copyright {
+  width: 100%;
+  text-align: center;
+  background-color: #16162d;
+  padding: 2rem 0;
+  position: relative;
+}
+
+.up {
+  position: absolute;
+  width: 5rem;
+  height: 5rem;
+  background-color: #eee;
+  top: -2.5rem;
+  right: 5rem;
+  border-radius: 100%;
+  display: flex;
+}
+
+.up i {
+  color: #221e3f;
+  font-size: 2rem;
+  margin: auto;
+}
 
 /*Start animations*/
 /*End animations*/
